--- a/index.html
+++ b/index.html
@@ -30,6 +30,63 @@
               <iframe width="560" height="315" src="https://www.youtube.com/embed/eWZ_8iQi59c?si=6PLXuXubsCQn5hP9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen style="float: left;"></iframe>
             </div>
         </div>
+        <div class="row">
+            <div class="col-6">
+                <table>
+                    <tr>
+                        <th>Date</th>
+                        <th>Breakfast</th>
+                        <th>Lunch</th>
+                        <th>Dinner</th>
+                    </tr>
+                    <tr>
+                        <td class="firstColumn">Monday</td>
+                        <td>Regular Breakfast</td>
+                        <td>Deli Sandwiches w/Chips</td>
+                        <td>Gnoschi & Pesto wiSide Salad</td>
+                    </tr><tr><td class="firstColumn">Tuesday</td>
+                        <td>Regular Breakfast</td>
+                        <td>Bacon Ranch Chicken Wrap</td>
+                        <td>Vegetarian Lasagna with Garlic Krols</td>
+                    </tr>
+                    <tr><td class="firstColumn">Wednesday</td>
+                        <td>Regular Breakfast</td>
+                        <td>Taco Salad</td>
+                        <td>Shrimp Str Fry over Rice</td>
+                    </tr>
+                    <tr><td class="firstColumn">Thursday</td>
+                        <td>Regular Breakfast</td>
+                        <td>Caesar Salad with Grilled Chicken</td>
+                        <td>Baked Garlic Chicken w/Butternut Squash</td></tr>
+                    <tr><td class="firstColumn">Friday</td>
+                        <td>Regular Breakfast</td>
+                        <td>Quesadillas</td>
+                        <td>Meatloaf w/ Mashed Potatoes and Corn</td></tr>
+                    <tr><td class="firstColumn">Saturday</td>
+                        <td>Regular Breakfast</td>
+                        <td>Grilled Cheese & Tomato Soup</td>
+                        <td>Tortellini Pasta w/ Garlic Bread</td></tr>
+                    <tr><td class="firstColumn">Sunday</td>
+                        <td>Regular Breakfast</td>
+                        <td>Crab Cakes with Clam Chowder</td>
+                        <td>Baked Haddock with Roasted Potatoes and Carrots</td></tr>                  
+                </table>
+            </div>
+            <div class="col-6"><p>There is a lot to do around <bold>New Haven</bold>, including:<br>
+                <dl>
+                <ol>
+                <dt><li><strong>Yale</strong></li></dt>
+                <dd><li>The Shops at Yale</li></dd>
+                <dd><li>The Peabody Museum</li></dd>
+                <dd><li>Yale Art Gallery</li></dd>
+                <dd><li>Yale British Art Gallery</li></dd>
+                <dd><li>Many coffee shops</li></dd>
+                <dd><li>A new cookie shop</li></dd>
+              </ol>
+              </dl>
+              </p>
+              </div>
+        </div>
     </body>
     <!-- Footer -->
    <footer
