changed table to be responsive

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         </div>
         <div class="row">
           <div class="col-6">
-          <table class="table" style="--bs-table-bg: #929fba">
-            <thead>
+          <table class="table table-hover table-bordered" style="--bs-table-bg: #929fba">
+            <thead style="text-align: center;">
               <tr>
                 <th>Date</th>
                 <th>Breakfast</th>
