--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <body style="background-color: #929fba;">
         <!-- Whenever I add "pt-2" to the div class, the other column gets the formatting, not the one with the "pt-2" specified-->
         <div class="row">̉
-            <div class="col-4 pt-2">
+            <div class="col-4">
             <blockquote class="blockquote">
                 "The Landing is a fantastic living community with acceess to several amenities and locations to shop, eat, and thrive."
             <footer class="blockquote-footer pt-2" style="font-style: italic;">Psychology Today</footer>
