update with responsive design

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <body style="background-color: #929fba;">
         <!-- Whenever I add "pt-2" to the div class, the other column gets the formatting, not the one with the "pt-2" specified-->
         <div class="row">̉
-            <div class="col-4">
+            <div class="col-4 pt-2">
             <blockquote class="blockquote">
                 "The Landing is a fantastic living community with acceess to several amenities and locations to shop, eat, and thrive."
             <footer class="blockquote-footer pt-2" style="font-style: italic;">Psychology Today</footer>
@@ -30,9 +30,9 @@
             </div>
         </div>
         <div class="row">
-          <div class="col-6">
-          <table class="table table-hover table-bordered" style="--bs-table-bg: #929fba">
-            <thead style="text-align: center;">
+          <div class="col-md-6">
+          <table class="table" style="--bs-table-bg: #929fba">
+            <thead>
               <tr>
                 <th>Date</th>
                 <th>Breakfast</th>
@@ -87,7 +87,7 @@
           </table>
           </div>
       
-                <div class="col-6"><p>There is a lot to do around <bold>New Haven</bold>, including:<br>
+                <div class="col-md-6"><p>There is a lot to do around <bold>New Haven</bold>, including:<br>
                 <dl>
                 <ol>
                 <dt><li><strong>Yale</strong></li></dt>
@@ -103,7 +103,7 @@
             </div>
         </div>
         <div class="row">
-          <div class="col-12">
+          <div class="col12">
             <p>Test</p>
             <span style="float: right;">
             <ul>
